force-app/main/default/objects/Deleted_POLI__c/Deleted_POLI__c.object-meta.xml
<CustomObject>
    <label>Deleted POLI</label>
    <nameField>
        <label>Deleted POLI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted POLI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>