force-app/main/default/objects/Deleted_POLI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deleted POLI</relationshipLabel>
    <relationshipName>Deleted_POLI</relationshipName>
    <type>Lookup</type>
</CustomField>