force-app/main/default/objects/Deleted_POLI__c/fields/Deleted_POLI_Id__c.field-meta.xml
<CustomField>
    <fullName>Deleted_POLI_Id__c</fullName>
    <label>Deleted POLI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>