force-app/main/default/objects/Deleted_POLI__c/fields/Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity__c</fullName>
    <label>Forecast Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>