force-app/main/default/objects/Deleted_POLI__c/fields/Is_Deleted_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Deleted_Item</label>
    <type>Checkbox</type>
</CustomField>