force-app/main/default/objects/Deleted_POLI__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>ProductRequest</referenceTo>
    <relationshipLabel>Deleted POLI</relationshipLabel>
    <relationshipName>Deleted_POLI</relationshipName>
    <type>Lookup</type>
</CustomField>