force-app/main/default/objects/Deleted_POLI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Account__c</columns>
    <columns>Forecast_Quantity__c</columns>
    <columns>Quantity_Requested__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Is_Deleted_Item__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Deleted_POLI_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>